--- a/estudos/site1/pagina1/css/site.css
+++ b/estudos/site1/pagina1/css/site.css
@@ -1,3 +1,8 @@
+#container {
+  justify-content: center;
+  max-width: 1200px 1300px;
+}
+
 body {
   font-family: sans-serif;
   background-color: #ffffff;
@@ -18,25 +23,22 @@ h1 {
   margin: 20px auto;
 }
 
-#menubar 
-{
+#menubar {
   float: right;
- margin-top: -470px;
+  margin-top: -470px;
 }
 
-#menulist 
-{
+#menulist {
   padding: 0;
   font-size: 16px;
   font-family: verdana, sans-serif;
 }
 
-.menuitem 
-{
+.menuitem {
   font-size: 30px;
   font-family: sans-serif;
   width: 700px;
-  height:40px;
+  height: 40px;
   border-radius: 3px;
   background-color: #555555;
   color: #ffffff;
@@ -47,35 +49,31 @@ h1 {
   cursor: pointer;
 }
 
-.menuitem:hover 
-{
+.menuitem:hover {
   background-color: #4d4c4ccb;
   transform: translateX(-10px);
   transition: ease-in-out;
   transition-duration: 0.3s;
   transition-delay: 0.1;
-  content:" ";
+  content: " ";
 }
 
-.menuitem::after
-{
+.menuitem::after {
   transform: translateX(10);
   transition: ease-in-out;
   transition-duration: 0.3s;
   transition-delay: 0.1;
 }
 
-.wrapper 
-{
+.wrapper {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   flex-wrap: wrap;
   max-width: 1200px;
   margin: 20px;
 }
 
-#div1 
-{
+#div1 {
   font-family: sans-serif;
   width: calc(50% - 20px);
   max-width: 1200px;
@@ -86,8 +84,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-#div2 
-{
+#div2 {
   border: 1px solid #555555;
   border-radius: 5px;
   padding: 20px;
@@ -97,37 +94,32 @@ h1 {
 }
 
 #div1:hover,
-#div2:hover
-{
- background-color: #ebeaea;
- transform: translateY(-10px);
- border-radius: 10px;
- content:" ";
+#div2:hover {
+  background-color: #ebeaea;
+  transform: translateY(-10px);
+  border-radius: 10px;
+  content: " ";
 }
 
 #div1,
-#div2
-{
+#div2 {
   transition-duration: 0.3s;
   transition-delay: 0.1;
 }
 
-h2 
-{
+h2 {
   text-align: center;
   text-transform: uppercase;
   color: #058fdf;
 }
 
-p 
-{
+p {
   text-indent: 50px;
   text-align: justify;
   letter-spacing: 3px;
 }
 
-a
-{
-  color:#555555;
+a {
+  color: #555555;
 }
 /*hehehehe ola*/
