--- a/estudos/site1/pagina2/css/page2.css
+++ b/estudos/site1/pagina2/css/page2.css
@@ -1,61 +1,54 @@
-body 
- {
-    font-family: sans-serif;
-    background-color: #415dfc;
-    margin: 0;
-    padding: 0;
- }
+body {
+  font-family: sans-serif;
+  background-color: #415dfc;
+  margin: 0;
+  padding: 0;
+}
 
-h1 
- {
-    font-family: sans-serif;
-    color: #ffffff;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    background-color: #6077fa;
-    width: 100%;
-    max-width: 500px;
-    text-align: center;
-    padding: 10px;
-    margin: 20px auto;
-  }
+h1 {
+  font-family: sans-serif;
+  color: #ffffff;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  background-color: #6077fa;
+  width: 100%;
+  max-width: 500px;
+  text-align: center;
+  padding: 10px;
+  margin: 20px auto;
+}
 
-  h2 
-{
+h2 {
   text-align: center;
   text-transform: uppercase;
   color: #6077fa;
 }
 
-p 
-{
+p {
   text-indent: 50px;
   text-align: justify;
   letter-spacing: 3px;
   color: #6077fa;
 }
 
-a
-{
-  color:#6077fa;;
+a {
+  color: #6077fa;
 }
 /*separando "#"*/
-#menubar 
-{
+
+#menubar {
   margin-top: 27;
   float: right;
   background-color: #c3ccff;
   width: 300px;
 }
 
-#menulist 
-{
+#menulist {
   padding: 0;
   font-size: 16px;
   font-family: verdana, sans-serif;
 }
-#div2
-{
+#div2 {
   font-family: sans-serif;
   height: 200px;
   width: 1300px;
@@ -69,8 +62,7 @@ a
   margin-bottom: 20px;
   z-index: 9999;
 }
-#div1 
-{
+#div1 {
   font-family: sans-serif;
   height: 200px;
   width: 1300px;
@@ -85,12 +77,11 @@ a
   z-index: 9999;
 }
 /*separar os codigos com "." de "#"*/
-.menuitem 
-{
+.menuitem {
   font-size: 30px;
   font-family: sans-serif;
   width: 250px;
-  height:40px;
+  height: 40px;
   border-radius: 3px;
   background-color: #6077fa;
   color: #ffffff;
@@ -102,14 +93,11 @@ a
   z-index: 0;
 }
 
-
-  .menuitem:hover 
-{
+.menuitem:hover {
   background-color: #b1bae9;
   transform: translateX(-2px);
   transition: ease-in-out;
   transition-duration: 0.3s;
   transition-delay: 0.1;
-  content:" ";
+  content: " ";
 }
-  
