--- a/estudos/site1/pagina3/css/page3.css
+++ b/estudos/site1/pagina3/css/page3.css
@@ -1,109 +1,109 @@
- body {
-     font-family: 'Courier New', Courier, monospace;
-     background-color: #000000;
-     margin: 0;
-     padding: 0;
- }
+#container {
+  justify-content: center;
+  max-width: 1200px 1300px;
+}
 
- h1 {
-     font-family: 'Courier New', Courier, monospace;
-     color: #129403;
-     background-color: #000000;
-     width: 100%;
-     text-align: center;
-     padding: 10px;
-     margin: 20px auto;
-     position: relative;
-     overflow: hidden;
-     white-space: nowrap;
-     border-right: 2px solid #129403;
-     
- }
+body {
+  font-family: "Courier New", Courier, monospace;
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+}
 
- h2 {
-     text-align: center;
-     text-transform: uppercase;
-     color: #129403;
-     position: relative;
-     overflow: hidden;
-     white-space: nowrap;
-     width: 100%;
-     border-right: 2px solid #129403;
-     animation: typing 4s steps(100, end), blink-caret 0.75s step-end infinite;
- 
- }
+h1 {
+  font-family: "Courier New", Courier, monospace;
+  color: #129403;
+  background-color: #000000;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 20px auto;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #129403;
+}
 
- .text-wrapper {
-    display: flex;
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #129403;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  border-right: 2px solid #129403;
+  animation: typing 4s steps(100, end), blink-caret 0.75s step-end infinite;
+}
+
+.text-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  font-family: "Courier New", Courier, monospace;
+  text-indent: 50px;
+  text-align: justify;
+  letter-spacing: 3px;
+  color: #129403;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #129403;
+  animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+
+a {
+  font-family: "Courier New", Courier, monospace;
+  color: #129403;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #129403;
+  animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+
+#div2,
+#div1 {
+  font-family: "Courier New", Courier, monospace;
+  color: #129403;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.menuitem {
+  font-family: "Courier New", Courier, monospace;
+  color: #129403;
+  position: relative;
+}
+
+.menuitem:hover {
+  color: #18cf04;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+
+  to {
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    
- }
+  }
+}
 
- p {
-     font-family: 'Courier New', Courier, monospace;
-     text-indent: 50px;
-     text-align: justify;
-     letter-spacing: 3px;
-     color: #129403;
-     position: relative;
-     overflow: hidden;
-     white-space: nowrap;
-     border-right: 2px solid #129403;
-     animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
- }
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
 
- a {
-     font-family: 'Courier New', Courier, monospace;
-     color: #129403;
-     position: relative;
-     overflow: hidden;
-     white-space: nowrap;
-     border-right: 2px solid #129403;
-     animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite;
- }
-
- #div2,
- #div1 {
-     font-family: 'Courier New', Courier, monospace;
-     color: #129403;
-     position: relative;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-
- }
-
- .menuitem {
-     font-family: 'Courier New', Courier, monospace;
-     color: #129403;
-     position: relative;
- }
-
- .menuitem:hover {
-     color: #18cf04;
- }
-
- @keyframes typing {
-     from {
-         width: 0;
-     }
-
-     to {
-         width: 100%;
-     }
- }
-
- @keyframes blink-caret {
-
-     from,
-     to {
-         border-color: transparent;
-     }
-
-     50% {
-         border-color: #129403;
-     }
- }
+  50% {
+    border-color: #129403;
+  }
+}
