--- a/fazendo coisas no tedio/sitex/index.css
+++ b/fazendo coisas no tedio/sitex/index.css
@@ -3,10 +3,20 @@
   padding: 0;
 }
 
+.container {
+  max-width: 1200px 1300px;
+  align-items: center;
+  box-sizing: border-box;
+}
+
 .logo {
   font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 7px;
+}
+
+a:hover {
+  opacity: 0.7;
 }
 
 a {
@@ -15,6 +25,30 @@ a {
   transition: 0.3s;
 }
 
+body {
+  background-color: #19191d;
+  color: #fff;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+main {
+  margin-top: 59px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+
+header {
+  margin-left: -10px;
+  height: 5vh;
+  width: 210vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
 nav {
   display: flex;
@@ -22,7 +56,8 @@ nav {
   align-items: center;
   font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
   background: #23232e;
-  height: 8vh;
+  height: 10vh;
+  width: 230vh;
 }
 
 .nav-list {
