--- a/estudos/site 4/index.css
+++ b/estudos/site 4/index.css
@@ -1,4 +1,5 @@
 #container {
+  /*em memoria da minha tia avó*/
   background-image: url("./image/images.jfif");
   background-size: cover;
   background-position: center;
