--- a/projeto/index.css
+++ b/projeto/index.css
@@ -50,7 +50,7 @@ button:active {
   min-height: 100px;
   border: 2px solid #ebebeb;
   background-color: #000000;
-  color: #3c463c;
+  color: #ffffff;
   font-family: "Courier New", Courier, monospace;
   margin-top: 10px;
   padding: 10px;
