--- a/projeto/cf-finder/index.css
+++ b/projeto/cf-finder/index.css
@@ -37,7 +37,7 @@ input[type="file"] {
   width: 100%;
   padding: 12px;
   border: 2px solid #333;
-  background-color: #000;
+  background-color: #ffffff09;
   color: #ffffff;
   font-family: "Courier New", Courier, monospace;
   margin-bottom: 12px;
