--- a/projeto/xss-tester/xss.css
+++ b/projeto/xss-tester/xss.css
@@ -61,11 +61,11 @@ label {
   font-size: 14px;
 }
 
-input[type="text"],
+input[type="url"],
 input[type="file"] {
   padding: 10px;
   border: 1px solid #333;
-  background-color: #000000;
+  background-color: #ffffff09;
   color: #ffffff;
   border-radius: 5px;
 }
